--- a/style.css
+++ b/style.css
@@ -30,3 +30,8 @@
     font-family: 'Courier New', Courier, monospace;
     background-color: paleturquoise;
 }
+
+#estudios {
+    background-color: powderblue;
+    text-align: center;
+}
